Dear Emacs, please make this -*-Text-*- mode!

NEWS for gWidgetstcltk

Changes for 0.0-45
-------------------

* added use.table option to gcheckboxgroup

* added do.buttons options for gbasicdialog

* improved [ method for glayout (Returns widget, list of widgets (if
  1-d slice) or matrix of widgets.

Changes for 0.0-44
-------------------
* new add method for adding tkrplot objects

* bug fixes for gfile (Thanks Richie, Yves)

* bug fixes for gcomobobox (Thanks Erich, Yves)

* added stub for ghtml

Changes for 0.0-43
-------------------
* change to selected= argument of gcomobobx. Will allow item value in
addition to index. 

* Bug fixes, (Thanks Erich, Carlos)

* new method editable<-. Used by gedit to allow selection but no
changing of the text.

Changes for 0.0-42
-------------------
* fix to add method of box containers and the expand, fill, anchor arguments
 
Changes for 0.0-41
-------------------
* doc fixes	

Changes for 0.0-40
-------------------
* gcheckboxgroup now uses backend R5 class
* gradio cannow use [<- to lengthen/shorten radio button count
* gedit new [<- for auto complete
* Added new R5 classes
* change behavior of default anchoring of children into parent. This
can be adjusted through the option "gw:tcltkDefaultAnchor".
* added extra functionality for gslider. Need not be integer valued now.
* bug fix for add method and fill argument
* Added calendar selector to gcalendar
* add [ method for gnotebook, kill [<- (wasn't working, isn't right)

Changes for 0.0-39
-------------------
* added [ method to glayout for extraction
* fix to handler code. Adds blockHandler, unblockHandler and fixes
bugs. Just gradio and gcheckboxgroup have only 1 handler per widget,
others can have multiple. Handler code is not as general as tcltk itself.

Changes for 0.0-38
-------------------
* minor fixes for ggroup, gframe to get traitr to work
* visible<- method for gedit fixed

Changes for 0.0-37
-------------------