@@ -4,6 +4,7 @@ NEWS for gWidgetstcltk
 
 Changes for 0.0-45
 -------------------
+* Added generics so that $, [[ and [[<- work with underlying toolkit object
 
 * added use.table option to gcheckboxgroup
 
